# max_func_combinatorial_cpp

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
app/: main.cpp
code/header/main/: s_max.h
code/header/tools/: file_parser.h  tools.h
code/src/main/: s_max.cpp
code/src/tools/: file_parser.cpp  tools.cpp
resource/input/non_regression/: 12.in  14.in  2.in  3.in  5.in  8.in  test13.in  test15.in  test4.in  test6.in
resource/input/valgrind/: 7.in  test16.in
resource/output/non_regression/: .script.sh.swp
resource/output/valgrind/: script.sh
test/: shared_routine.h
test/non_regression/: non_regression.cpp
test/valgrind/: valgrind.cpp
